app/practices/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: practice
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          resources:
            limits:
              cpu: "0.5"
              memory: "256Mi"
            requests:
              cpu: "0.25"
              memory: "128Mi"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: practice
  name: nginx-service
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32000
