app/practices/spring-application.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: practice
  name: spring-application-deployment
spec:
  selector:
    matchLabels:
      app: spring-application
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-application
    spec:
      containers:
        - name: spring-application
          image: ishuiyutian/spring-application:1.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 6
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: "0.5"
              memory: "256Mi"
            requests:
              cpu: "0.25"
              memory: "128Mi"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: practice
  name: spring-application-service
spec:
  selector:
    app: spring-application
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
